==> ambiot/amazon-freertos/vendors/realtek/boards/amebaPro2/ports/wifi/iot_wifi.c <==
#include "FreeRTOS.h"
#include "Semphr.h"
#include "iot_wifi.h"
#include "aws_wifi_config.h"
#include "wifi_constants.h"
#include "wifi_structures.h"
#include "wifi_conf.h"
#include "device_lock.h"
#include "lwip_intf.h"
#include "lwip_netconf.h"

WIFIReturnCode_t WIFI_On( void )
{
#if CONFIG_INIT_NET
#if CONFIG_LWIP_LAYER
extern int lwip_init_done;
    if(lwip_init_done == 0){
        LwIP_Init();
    }
#endif
#endif
#if CONFIG_WIFI_IND_USE_THREAD
    wifi_manager_init();
#endif
    wifi_off();
    vTaskDelay(20);
    if (wifi_on(RTW_MODE_STA) < 0){
        printf("Wifi on failed!");
        return eWiFiFailure;
    }
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer,
                            uint8_t ucNumNetworks )
{
    /* Check params */
    if ((NULL == pxBuffer) || (0 == ucNumNetworks))
        return eWiFiFailure;

    // Scan network and print them out.
	// Can refer to fATWS() in atcmd_wifi.c and scan_result_handler() below.
	printf("\n\rScan network\n");
	rtw_scan_param_t scan_param;
	rtw_memset(&scan_param, 0, sizeof(scan_param));
	scan_param.scan_user_callback = scan_result_handler;
	if (wifi_scan_networks(&scan_param, 0) != RTW_SUCCESS) {
		printf("\n\rERROR: wifi_scan_networks() failed\n");
        goto exit;
    }
    return eWiFiSuccess;
exit:
    return eWiFiFailure;
}

WIFIReturnCode_t WIFI_SetMode( WIFIDeviceMode_t xDeviceMode )
{
	int ret = eWiFiSuccess;
    switch (xDeviceMode)
    {
        case eWiFiModeStation:
            wifi_off();
            vTaskDelay(20);
            if (wifi_on(RTW_MODE_STA) < 0){
                printf("\n\rERROR: Wifi on failed!");
            }
            break;
        case eWiFiModeAP:
            wifi_off();
            vTaskDelay(20);
            if (wifi_on(RTW_MODE_AP) < 0){
                printf("\n\rERROR: Wifi on failed!");
            }
            break;
        case eWiFiModeP2P:
            wifi_off();
            vTaskDelay(20);
            if (wifi_on(RTW_MODE_P2P) < 0){
                printf("\n\rERROR: Wifi on failed!");
            }
            break;
        default:
        	ret = eWiFiFailure;
            break;
    }

    return ret;
}

WIFIReturnCode_t WIFI_GetMode( WIFIDeviceMode_t * pxDeviceMode )
{
    int mode, ret;
    if(pxDeviceMode == NULL)
    	return eWiFiFailure;
    ret = wext_get_mode("wlan0", &mode);
    if (ret < 0)
        return eWiFiFailure;
    switch (wifi_mode)
    {
        case RTW_MODE_STA:
            * pxDeviceMode = eWiFiModeStation;
            break;
        case RTW_MODE_AP:
            * pxDeviceMode = eWiFiModeAP;
            break;
        case RTW_MODE_P2P:
            * pxDeviceMode = eWiFiModeP2P;
            break;
        default:
            return eWiFiPMNotSupported;
    }
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    char buf[32];
    char mac[wificonfigMAX_BSSID_LEN];
    int i = 0;

    if(pucMac == NULL)
    	return eWiFiFailure;

    wifi_get_mac_address(buf);
    sscanf(buf, "%02x:%02x:%02x:%02x:%02x:%02x", &mac[0], &mac[1], &mac[2], &mac[3], &mac[4], &mac[5]);
    for(i=0; i<wificonfigMAX_BSSID_LEN; i++)
        pucMac[i] = mac[i]&0xFF;
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_ConfigureAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    int ret;
#if CONFIG_LWIP_LAYER
    struct netif * pnetif = &xnetif[0];
#endif

    if((pxNetworkParams == NULL) || (pxNetworkParams->ucSSID == NULL) || (pxNetworkParams->xPassword.xWPA.cPassphrase == NULL))
    	return eWiFiFailure;

    if((pxNetworkParams->ucSSIDLength > wificonfigMAX_SSID_LEN) || pxNetworkParams->xPassword.xWPA.ucLength > wificonfigMAX_PASSPHRASE_LEN)
    	return eWiFiFailure;

    if( (wifi_mode != RTW_MODE_AP) ){
        WIFI_SetMode(eWiFiModeAP);
    }
    rtw_softap_info_t softAP_config = {0};
	softAP_config.ssid.len = pxNetworkParams->ucSSIDLength;
	rtw_memcpy(softAP_config.ssid.val, (char*)pxNetworkParams->ucSSID, softAP_config.ssid.len);
	softAP_config.password = (char*)pxNetworkParams->xPassword.xWPA.cPassphrase;
	softAP_config.password_len = pxNetworkParams->xPassword.xWPA.ucLength;
	softAP_config.channel = pxNetworkParams->ucChannel;
	softAP_config.security_type = prvConvertSecurityAbstractedToRTW(pxNetworkParams->xSecurity);
	if (wifi_start_ap(&softAP_config) < 0) {
        printf("\n\r[WLAN_SCENARIO_EXAMPLE] ERROR: wifi_start_ap failed\n");
        return eWiFiFailure;
    }

    while(1) {
        char essid[33];
        int timeout = 20;
        if(wext_get_ssid(WLAN0_NAME, (unsigned char *) essid) > 0) {
            if(strncmp((const char *) essid, (const char *)pxNetworkParams->ucSSID, pxNetworkParams->ucSSIDLength) == 0) {
                printf("\n\r%s started\n", pxNetworkParams->ucSSID);
                break;
            }
        }

        if(timeout == 0) {
            printf("\n\rERROR: Start AP timeout!");
            return eWiFiTimeout;
        }

        vTaskDelay(1 * configTICK_RATE_HZ);
        timeout --;
    }
#if defined( CONFIG_ENABLE_AP_POLLING_CLIENT_ALIVE )&&( CONFIG_ENABLE_AP_POLLING_CLIENT_ALIVE == 1 )
    wifi_set_ap_polling_sta(1);
#endif

#if CONFIG_LWIP_LAYER
    //LwIP_UseStaticIP(pnetif);
    dhcps_init(pnetif);
#endif
    return eWiFiSuccess;
}
