==> aws/amazon-freertos/vendors/cypress/boards/CY8CKIT_064S0S2_4343W/ports/wifi/iot_wifi.c <==
#include <FreeRTOS.h>
#include <task.h>
#include <iot_wifi.h>
#include <iot_wifi_common.h>
#include "aws_wifi_config.h"
#include <cy_result.h>
#include <cybsp_wifi.h>
#include <cyabs_rtos.h>
#include <cyobjstore.h>
#define CMP_MAC( a, b )  (((((unsigned char*)a)[0])==(((unsigned char*)b)[0]))&& \
                          ((((unsigned char*)a)[1])==(((unsigned char*)b)[1]))&& \
                          ((((unsigned char*)a)[2])==(((unsigned char*)b)[2]))&& \
                          ((((unsigned char*)a)[3])==(((unsigned char*)b)[3]))&& \
                          ((((unsigned char*)a)[4])==(((unsigned char*)b)[4]))&& \
                          ((((unsigned char*)a)[5])==(((unsigned char*)b)[5])))
#define CY_FIRST_WIFI_PROFILE           (128)
#define CY_TOTAL_WIFI_PROFILES          (8)
#define DEFAULT_SLEEP_DELAY_MS          (200)

WIFIReturnCode_t WIFI_On( void )
{
    if (!isPoweredUp)
    {
        if (cy_rtos_init_mutex(&wifiMutex) != CY_RSLT_SUCCESS)
        {
            return eWiFiFailure;
        }
        if (cybsp_wifi_init_primary(&primaryInterface) != CY_RSLT_SUCCESS)
        {
            cy_rtos_deinit_mutex(&wifiMutex);
            return eWiFiFailure;
        }
        isPoweredUp = true;
    }   
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_Scan( WIFIScanResult_t * pxBuffer, uint8_t ucNumNetworks )
{
    configASSERT(pxBuffer != NULL);

    if (cy_rtos_get_mutex(&wifiMutex, wificonfigMAX_SEMAPHORE_WAIT_TIME_MS) == CY_RSLT_SUCCESS)
    {
        cy_rtos_init_semaphore(&scanSema, 1, 0);

        internalScanData.sema = &scanSema;
        internalScanData.aps = pxBuffer;
        internalScanData.count = ucNumNetworks;
        internalScanData.scanInProgress = true;
        internalScanData.offset = 0;

        uint32_t res = whd_wifi_scan(primaryInterface, WHD_SCAN_TYPE_ACTIVE, WHD_BSS_TYPE_ANY,
                                            NULL, NULL, NULL, NULL, whd_scan_handler, &internalScanResult, &internalScanData);
        if (res != WHD_SUCCESS)
        {
            cy_rtos_set_mutex(&wifiMutex);
            return eWiFiFailure;
        }

        /* This is a blocking call. If you are stuck here the scan handler did not get called. */
        cy_rtos_get_semaphore(internalScanData.sema, CY_RTOS_NEVER_TIMEOUT, false);

        cy_rtos_deinit_semaphore(internalScanData.sema);
        if (cy_rtos_set_mutex(&wifiMutex) != CY_RSLT_SUCCESS)
        {
            return eWiFiFailure;
        }
    }
    else
    {
        return eWiFiTimeout;
    }
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_SetMode( WIFIDeviceMode_t xDeviceMode )
{
    WIFIReturnCode_t ret = eWiFiSuccess;
    if (devMode != xDeviceMode)
    {
        switch(xDeviceMode)
        {
            case eWiFiModeAP:
            case eWiFiModeStation:
                ret = WIFI_Reset();
                if (ret == eWiFiSuccess)
                {
                    devMode = xDeviceMode;
                }
                break;
            case eWiFiModeP2P:
            case eWiFiModeNotSupported:
            default:
                ret = eWiFiNotSupported;
        }
    }
    return ret;
}

WIFIReturnCode_t WIFI_GetMode( WIFIDeviceMode_t * pxDeviceMode )
{
    configASSERT(pxDeviceMode != NULL);
    if (cy_rtos_get_mutex(&wifiMutex, wificonfigMAX_SEMAPHORE_WAIT_TIME_MS) == CY_RSLT_SUCCESS)
    {
        *pxDeviceMode = devMode;
        if (cy_rtos_set_mutex(&wifiMutex) != CY_RSLT_SUCCESS)
        {
            return eWiFiFailure;
        }
    }
    else
    {
        return eWiFiTimeout;
    }
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_GetMAC( uint8_t * pucMac )
{
    configASSERT(pucMac != NULL);
    whd_mac_t mac;
    if (cy_rtos_get_mutex(&wifiMutex, wificonfigMAX_SEMAPHORE_WAIT_TIME_MS) == CY_RSLT_SUCCESS)
    {
        if (whd_wifi_get_mac_address(primaryInterface, &mac) != CY_RSLT_SUCCESS)
        {
            cy_rtos_set_mutex(&wifiMutex);
            return eWiFiFailure;
        }
        memcpy(pucMac, &mac, sizeof(mac));
        if (cy_rtos_set_mutex(&wifiMutex) != CY_RSLT_SUCCESS)
        {
            return eWiFiFailure;
        }
    }
    else
    {
        return eWiFiTimeout;
    }
    return eWiFiSuccess;
}

WIFIReturnCode_t WIFI_ConfigureAP( const WIFINetworkParams_t * const pxNetworkParams )
{
    whd_ssid_t ssid;
    uint8_t *key;
    uint8_t keylen;
    whd_security_t security;
    uint8_t channel;

    cy_check_network_params(pxNetworkParams);

    if (devMode != eWiFiModeAP &&
        devMode != eWiFiModeNotSupported &&
        WIFI_SetMode(eWiFiModeAP) != eWiFiSuccess)
    {
        return eWiFiFailure;
    }

    if (cy_rtos_get_mutex(&wifiMutex, wificonfigMAX_SEMAPHORE_WAIT_TIME_MS) == CY_RSLT_SUCCESS)
    {
        cy_convert_network_params(pxNetworkParams, &ssid, &key, &keylen, &security, &channel);

        if (whd_wifi_init_ap(primaryInterface, &ssid, security, key, keylen, channel) != CY_RSLT_SUCCESS)
        {
            cy_rtos_set_mutex(&wifiMutex);
            return eWiFiFailure;
        }
        devMode = eWiFiModeAP;
        if (cy_rtos_set_mutex(&wifiMutex) != CY_RSLT_SUCCESS)
        {
            return eWiFiFailure;
        }
    }
    else
    {
        return eWiFiTimeout;
    }
    return eWiFiSuccess;
}
